<resources>
    <string name="app_name">Fridge Organizer</string>
    <string name="action_settings">Settings</string>
    <string name="content_authority">de.ruf2.rube.app</string>
    <string name="recent_fridges">Recent Fridges</string>
    <string name="title_activity_navigation_drawer">navigation_drawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_add_product">Add Product</string>
    <string name="button_add_fridge">Add Fridge</string>
    <string name="product_name">Product Name</string>
    <string name="select">Select</string>
    <string name="product_amount">Amount</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="add_product">Add Product</string>
    <string name="buy_date">Buy Date</string>
    <string name="new_fridge">New Fridge</string>
    <string name="select_fridge">Select Fridge</string>
    <string name="fridge_name">Fridge Name</string>
    <string name="select_date">Select Date</string>
    <string name="select_from">Select From</string>
    <string name="select_to">Select To</string>
    <string name="search">Search</string>
    <string name="expiring_between">Expiring Between</string>
    <string name="buying_date_between">Buying Date Between</string>
    <string name="expiring_date_between">Expiring Date Between</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="field_required">This field is required.</string>
    <string name="error_product_amount">Product amount has to be at least 1.</string>
    <string name="button_scan">Scan</string>
    <string name="hint_insert_ean">Insert EAN. Digits only</string>

    <!--drawer titles-->
    <string name="title_add_fridge">Add Fridge</string>
    <string name="title_scan_product">Scan/Add Product</string>
    <string name="title_expiring_products">Expiring Products</string>
    <string name="title_search_product">Search Product</string>
    <string name="title_settings">Settings</string>
    <string name="title_search_results">Search Results</string>

    <!--shared preferenc keys-->
    <string name="key_enable_notifications">enable_notifications</string>
    <string name="key_custom_date">custom_date</string>
    <string name="key_expiry_date">expiry_date</string>

    <!--notification strings-->
    <string name="notify_text_there_are">"There are "</string>
    <string name="notify_text_expiring_products">" expiring product(s)"</string>
    <string name="notify_title">You have expiring products</string>

    <!-- -
     This is an ad unit ID for a banner test ad. Replace with your own banner ad unit id.
     For more information, see https://support.google.com/admob/answer/3052638

    <!- -->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="appwidget_text">Expiring Products:</string>
    <string name="add_widget">Add widget</string>
    <string name="title_share">Share</string>
    <string name="title_send">Send</string>
    <string name="title_communicate">Communicate</string>
    <string name="title_home">Home</string>
    <string name="search_product">Search Product</string>
    <string name="widget_empty_string">Good Work! No expiring products.</string>
    <string name="appwidget_number">0</string>
    <string name="count_of_expiring_products">Count of expiring products</string>
    <string name="snack_new_product_created">"New product created: "</string>
    <string name="no_scan_data_received">No scan data received!</string>
    <string name="snackbar_new_fridge">"New fridge created: "</string>
    <string name="snack_delete_fridge">"Deleted fridge: "</string>
    <string name="snack_click_product">"Click product: "</string>
    <string name="snack_deleted_product">"Deleted product: "</string>
</resources>
