<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search_product"
            android:title="@string/title_search_product" />
        <!--android:icon="@drawable/ic_menu_camera"-->
        <item
            android:id="@+id/nav_expiring"
            android:title="@string/title_expiring_products"/>
        <item
            android:id="@+id/nav_scan"
            android:title="@string/title_scan_product" />
        <!--android:icon="@drawable/ic_menu_slideshow"-->

        <item
            android:id="@+id/nav_add_fridge"
            android:title="@string/button_add_fridge" />
        <!--android:icon="@drawable/ic_menu_manage"-->
        <item
            android:id="@+id/nav_settings"
            android:title="@string/title_settings" />
            <!--android:icon="@drawable/ic_menu_manage"-->
    </group>


    <item android:title="@string/title_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/title_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/title_send" />
        </menu>
    </item>

</menu>
