<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="de.ruf2.rube.fridgeorganizer.SearchDetailFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search" />

  <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:hintEnabled="true"
      app:hintAnimationEnabled="true"
      android:layout_marginTop="@dimen/margin_fields">

      <EditText
          android:id="@+id/edit_text_search_product_name"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/product_name"
          android:inputType="text"
          android:maxLines="1"/>
  </android.support.design.widget.TextInputLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expiring_date_between"
        android:layout_marginTop="@dimen/margin_fields"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_fields">
        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:hintEnabled="true"
            app:hintAnimationEnabled="true">
            <EditText
                android:id="@+id/text_view_search_expire_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/from"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:hintEnabled="true"
            app:hintAnimationEnabled="true">
            <EditText
                android:id="@+id/text_view_search_expire_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/to"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buying_date_between"
        android:layout_marginTop="@dimen/margin_fields"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_fields">
        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true">
            <EditText
                android:id="@+id/text_view_search_buy_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/from"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:hintEnabled="true"
            app:hintAnimationEnabled="true">
            <EditText
                android:id="@+id/text_view_search_buy_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/to"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
</LinearLayout>
